# ivygen

./: .gitignore  .travis.yml  BasicMesh.cpp  BasicMesh.h  CMakeLists.txt  Camera.h  Ivy.cpp  Ivy.h  OBJLoader.cpp  OBJLoader.h  OBJWriter.h  RenderWidget.cpp  RenderWidget.h  SetupWidget.cpp  SetupWidget.h  Vector3d.h  aboutdialog.ui  appveyor.yml  azure-pipelines.yml  code_of_conduct.md  contributing.md  core.pro  ivygen.pro  ivygen.qrc  ivygen.rc  ivygenerator.cpp  ivygenerator.h  main.cpp  mkdocs.yml  readme.md  readme.txt  travis.yml
CI/: travis.linux.before_install.sh  travis.linux.install.sh
cmake/modules/: GetVersionFromGitTag.cmake  WinDeployQt.cmake
data/: klinker_mauer.mtl
doc/: building.md
docs/: building.md  index.md
plugins/importers/ObjImporter/: ObjImporter.json  ObjImporter.pro  objimporter.cpp  objimporter.h
qmake/: deployqt.pri  gitversion.pri
resources/: ivygen.qrc
src/: BasicMesh.h  CMakeLists.txt  Common.cpp  Common.h  Ivy.h  ModelLoader.cpp  OBJLoader.cpp  OBJWriter.cpp  RenderWidget.cpp  SetupWidget.cpp  SetupWidget.h  Vector2d.h  Vector3d.h  aboutdialog.cpp  aboutdialog.ui  birthwidget.cpp  birthwidget.h  colorpickerwidget.h  ivygen.pro  ivygenerator.cpp  ivygenerator.h  main.cpp  settingsdialog.cpp  settingsdialog.ui
src/app/: BirthWidget.cpp  CMakeLists.txt  Common.h  Ivy.cpp  Ivy.h  RenderWidget.cpp  RenderWidget.h  SetupWidget.cpp  aboutdialog.cpp  aboutdialog.ui  app.pro  birth_widget.cpp  birth_widget.h  colorpickerwidget.cpp  colorpickerwidget.h  common.cpp  common.h  configuration.cpp  configuration.h  ivy.cpp  ivy.h  ivygeneratorwindow.cpp  main.cpp  pathedit.cpp  pathedit.h  pathedit.ui  plugin_loader.cpp  plugin_loader.h  render_widget.cpp  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  setup_widget.cpp  setup_widget.h
src/app/resources/: darkorange.qss  ivygen.qrc
src/app/ui/: aboutdialog.ui  settingsdialog.cpp
src/core/: BasicMesh.cpp  BasicMesh.h  CMakeLists.txt  Camera.cpp  Camera.h  Common.h  ModelLoader.cpp  ModelLoader.h  OBJWriter.h  Vector2d.h  basic_mesh.cpp  basic_mesh.h  camera.cpp  camera.h  configuration.cpp  configuration.h  core.pro  core_global.h  importerplugin.h  model_loader.cpp  model_loader.h  obj_writer.h  vector3d.h
src/core/ConfigLib/: configenum.h  configfile.cpp  configfile.h  configitem.h  configitem_base.cpp  configitem_base.h  configmap.h  configsection.h  configvector.h
src/core/objloader/: obj_parser.cpp  obj_parser.h
src/core/plugins/: exporter_interface.h  importer_interface.h
src/extensibility/: importerplugin.cpp  importerplugin.h
src/gui/: RenderWidget.cpp  RenderWidget.h  SetupWidget.cpp  birthwidget.cpp  colorpickerwidget.ui  ivygenerator.cpp  ivygeneratorwindow.cpp  settingsdialog.ui
src/objloader/: objLoader.cpp
src/plugins/: CMakeLists.txt  plugins.pro
src/plugins/exporters/: CMakeLists.txt
src/plugins/exporters/objexporter/: CMakeLists.txt  obj_writer.cpp  obj_writer.h  objexporter.cpp  objexporter.h
src/plugins/importers/: CMakeLists.txt  importers.pro
src/plugins/importers/objimporter/: CMakeLists.txt  objimporter.cpp  objimporter.h  objimporter.pro
src/plugins/importers/objimporter/objloader/: list.cpp  objLoader.h
